--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         helloworld
         <ol>
-            <lbruh></l>
+            <li>bruh</li>
         </ol>
     </body>
 </html>
